<resources>
    <string name="app_name">SelenaApp</string>
    <string name="title_home">Beranda</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_settings">Pengaturan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Package Transaksi -->
    <string name="add_transaction">Tambah Transaksi</string>
    <string name="detail_keuangan">Detail Keuangan</string>
    <string name="shopee">Shopee</string>
    <string name="tokopedia">Tokopedia</string>
    <string name="choose_ecommerce">Pilih Ecommerce</string>
    <string name="transaction_history">Riwayat</string>
    <string name="total_income">Total Pemasukan</string>
    <string name="total_outcome">Total Pengeluaran</string>
    <string name="total_profit">Total Keuntungan</string>
    <string name="warning_no_transaction">Belum Ada Transaksi yang diunggah</string>

    <string name="title_form_update_data">Form Update Transaksi</string>

    <string name="created_at">Dibuat pada</string>
    <string name="updated_at">Diperbarui pada</string>

    <!-- Kotak Transaksi -->
    <string name="average_income">Rata-rata Pemasukkan</string>
    <string name="average_outcome">Rata-rata Pengeluaran</string>
    <string name="average_profit">Rata-rata Keuntungan</string>
    <string name="anomali">Pengeluaran Tak Terduga</string>

    <!-- Package Home -->
    <string name="finance_advice">Saran Keuangan</string>


    <!-- Testing -->
    <string name="_100000">100000</string>
    <string name="testing">Testing</string>

    <string name="choose_method">Pilih Metode</string>
    <string name="add_data">Isi Data</string>
    <string name="add_file">Upload File Excel</string>
    <string name="title_next">Selanjutnya</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Nama</string>

    <string name="amount">Jumlah</string>
    <string name="type_transaction">Jenis Transaksi</string>
    <string name="date">Tanggal</string>
    <string name="notes">Catatan</string>
    <string name="send">Kirim</string>
    <string name="title_form_data">Form Tambah Transaksi</string>
    <string name="title_login_page">Login</string>
    <string name="title_signup_page">Create your account</string>
    <string name="logout">Keluar</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="help">Bantuan</string>
    <string name="help_icon">icon help</string>
    <string name="arrow_icon">icon arrow</string>
    <string name="Amount">amount</string>
    <string name="createdAt">creted at</string>
    <string name="Notes">Catatan</string>
    <string name="Status">Status</string>
    <string name="Date">Tanggal</string>
    <string name="ID_Transaksi">ID Transaksi</string>
    <string name="User_ID">ID Pengguna</string>
    <string name="hint_name">Masukkan Nama Anda</string>
    <string name="hint_email">      Masukkan e-mail anda</string>
    <string name="hint_password">Buatlah password anda</string>


    <string name="ex_name">yourname</string>
    <string name="ex_email">yourname@gmail.com</string>
    <string name="ex_password">password</string>
    <string name="deleteAll">Hapus Transaksi</string>
    <string name="forgot_password"><u>Lupa Password?</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="refresh">refresh</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="go_to_transaction">Go to Transaction</string>
    <string name="transaction_icon">Transaction Icon</string>

    <string name="no_anomaly">Belum Ada Pengeluaran Tak Terduga</string>
    <string name="chart">Grafik</string>
    <string name="account">Akun</string>
    <string name="delete">Hapus</string>
    <string name="update">Ubah</string>

</resources>