<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <!-- TextView untuk "Settings" -->
    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- TextView untuk "Account" -->
    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <!-- Bagian Icon -->
            <ImageView
                android:id="@+id/icon_user"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_user"
                android:contentDescription="@string/help_icon" />

            <!-- Bagian Teks -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="email@example.com"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_settings_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_account"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Switch untuk Dark Mode -->


    <!-- CardView untuk Help -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_below"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_switch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_dark_mode"
                android:contentDescription="@string/help_icon" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:text="@string/dark_mode"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_settings_below"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView untuk Help -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/card_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_help"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_help"
                android:contentDescription="@string/help_icon" />

            <TextView
                android:id="@+id/tv_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/help"
                android:textSize="20sp"
                 />

            <ImageView
                android:id="@+id/icon_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="@string/arrow_icon" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_delete_all"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/deleteAll"
        android:textColor="#FF0000"
        android:backgroundTint="@color/white"
        app:strokeColor="#FF0000"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_delete_all"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="150dp" />
    <!-- Button Logout -->
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:icon="@drawable/ic_logout"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="100dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
