<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.DetailAnomalyActivity">

    <!-- ImageView di atas Amount -->
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_selena_3"
        android:contentDescription="Transaction Icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_download_pdf"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_download"/>

    <!-- CardView untuk semua TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F5F7F8"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/btn_download_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <!-- Amount -->
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amount"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#000000" />

            <!-- Created At -->


            <!-- Transaction ID -->
            <TextView
                android:id="@+id/tv_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/createdAt"
                android:textColor="#000000"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_transaction_ID_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ID_Transaksi"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tv_transaction_ID_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="123456789"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    app:layout_constraintStart_toEndOf="@id/tv_transaction_ID_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Notes -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_notes_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Notes"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tv_notes_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Transaction details here"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    app:layout_constraintStart_toEndOf="@id/tv_notes_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tombol Delete dan Update -->
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="#FF0000"
        android:backgroundTint="@color/white"
        app:cornerRadius="32dp"
        app:strokeColor="#FF0000"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
